# agent-risk-scanner

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  action.yml  design_20260507.md  discussed-with-ai.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  case_proposal.yml
.github/workflows/: ci.yml
agent_risk_scanner/: cli.py  harness.py  judge.py  policy.py  report.py  report_template.html  schema.py
agent_risk_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cases/agentic/excessive-agency/: ea_benign_appropriate_send.yaml  ea_overzealous_log_cleanup.yaml  ea_sql_write_on_read_task.yaml  ea_unsolicited_email_cc.yaml
cases/mcp/tool-poisoning/: mcp_benign_server.yaml  mcp_exfil_via_tool.yaml  mcp_nl_clear_cache.yaml  mcp_nl_exfil.yaml  mcp_nl_ssh_key.yaml  mcp_overwrite_ssh_key.yaml  mcp_poisoned_clear_cache.yaml
cases/prompt-injection/benign/: benign_cleanup_tmp.yaml  benign_encoded_config.yaml  benign_resume_clean.yaml  benign_skill_legit.yaml  benign_skill_with_script.yaml  benign_summarize_clean_email.yaml
cases/prompt-injection/general/: ipi_exfil_secret_to_file.yaml  ipi_exfil_to_webhook.yaml  ipi_fake_urgent_preamble.yaml  ipi_ignore_previous.yaml  ipi_important_instructions.yaml  ipi_jailbreak_devmode.yaml  ipi_latent_report.yaml  ipi_latent_resume.yaml  ipi_overwrite_ssh_key.yaml  ipi_rm_via_readme.yaml  ipi_rm_workspace.yaml  ipi_tool_knowledge.yaml
cases/prompt-injection/obfuscation/: obf_base64_payload.yaml  obf_rot13_payload.yaml
cases/prompt-injection/skill/: skill_inject_contextual.yaml  skill_inject_download_exec.yaml  skill_inject_line_injection.yaml  skill_inject_obvious.yaml
cases/prompt-injection/web/: web_benign_fetch.yaml  web_ipi_fetch_page.yaml  web_ipi_https_page.yaml  web_ipi_via_search_result.yaml
cases/rag/corpus-poisoning/: rag_benign.yaml  rag_exfil_via_doc.yaml  rag_ipi_via_runbook.yaml  rag_wrong_fact.yaml
examples/ci/: agent-risk.full.policy.yaml  agent-risk.policy.yaml  github-actions.yml
examples/claudecode/: README.md  agent.yaml
examples/codex/: README.md  agent.yaml
examples/dummy_agent/: agent.py  agent.yaml
examples/dummy_mcp_agent/: agent.py  agent.yaml
examples/dummy_rag_agent/: agent.py  agent.yaml
examples/dummy_web_agent/: agent.py  agent.yaml
examples/langgraph/: README.md  agent.py  agent.yaml  requirements.txt
examples/mcp_langgraph/: README.md  agent.py  agent.yaml  requirements.txt
examples/mcp_official/: README.md  agent.py  agent.yaml  requirements.txt
examples/pi/: README.md  agent.yaml
examples/web_langgraph/: README.md  agent.py  agent.yaml
report-viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
report-viewer/public/: sample-report.json
report-viewer/src/: App.tsx  index.css
specs/: 20260519.md
tests/: test_cli_gate.py  test_cli_loaders.py  test_harness.py  test_judge.py  test_policy.py  test_report.py
(+10 files in other folders)
