[project]
name = "agent-risk-scanner"
version = "0.0.1"
description = "Sandboxed BYOA security scanner for tool-using AI agents"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
agent-risk-scan = "agent_risk_scanner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_risk_scanner*"]
